<resources>
    <!-- General -->
    <string name="app_name">Moviedb</string>
    <string name="img_description">Descripción</string>
    <string name="error_message">Mensaje de error</string>
    <!-- Movies List -->
    <string name="movie">Peliculas</string>
    <!-- Movie detail -->
    <string name="movie_detail">Detalle de la Pelicula</string>
    <string name="connection_problem">Problema de conexión!!</string>
    <string name="duration">Duración:</string>
    <string name="date">Fecha de estreno:</string>
    <string name="score">Calificación:</string>
    <string name="summary">Descripción:</string>
</resources>
