<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/connection_problem"
        android:visibility="gone"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_16">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_300"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:scaleType="centerCrop"
                tools:src="@drawable/poster_placeholder" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                app:cardCornerRadius="@dimen/dp_10"
                app:layout_constraintTop_toBottomOf="@id/iv_movie_poster">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/dp_16">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/movie_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_20"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        tools:text="Title" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/movie_tagline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_16"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        tools:text="Subtitle" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/movie_runtime_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_16"
                        android:textSize="@dimen/sp_18"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/duration"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/movie_runtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_16"
                        android:textColor="@color/black"
                        tools:text="150" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/movie_release_date_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:textSize="@dimen/sp_18"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/date" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/movie_release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_16"
                        android:textColor="@color/black"
                        tools:text="Fecha" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/movie_rating_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:textSize="@dimen/sp_18"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/score" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/movie_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_16"
                        android:textColor="@color/black"
                        tools:text="10" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/summary"
                        android:textSize="@dimen/sp_18" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/movie_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_16"
                        tools:text="Determined to prove herself, Officer Judy Hopps, the first bunny on Zootopia's police force, jumps at the chance to crack her first case - even if it means partnering with scam-artist fox Nick Wilde to solve the mystery." />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>